# ReelsParser

./: .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  project_structure.json  pyproject.toml
alembic/: env.py
alembic/versions/: 06710319c201_add_datetime_proper_fields.py  1546c3f42415_add_biginteger_to_telegram_id.py  1bd2940d9dc4_initial_revision.py  9229f126ea4d_add_valid_column.py  b86a0a0c2343_add_users_plans_payments.py  e2390eaec2b0_add_plan_id_into_payments.py
app/: __init__.py  main.py  scripts.py
app/api/: __init__.py  deps.py
app/api/instagram_account/: __init__.py  router.py  schemas.py
app/api/instagram_parsing/: __init__.py  router.py  (+1 more)
app/core/: __init__.py  config.py  env.py  logging_settings.py  settings.py
app/custom_enums/: __init__.py  app_environment.py  error_codes.py  plan_types.py
app/exceptions/: __init__.py  instagram_exceptions.py  proxy_exceptions.py
app/models/: __init__.py  instagram.py  payment.py  plan.py  profile.py  proxy.py  tg_user.py
app/parser/: __init__.py  auth.py  credentials.py  reels.py
app/scripts/: manual_register.py
app/services/: __init__.py  browser.py  db_manager.py  parser_manager.py  proxy_manager.py  redis_manager.py  robokassa_service.py
bot/: exceptions.py  main.py
bot/core/: __init__.py  settings.py
bot/handlers/: __init__.py  parse_handler.py  pay_handler.py  plan_handler.py  profile_handler.py  start_handler.py
bot/keyboards/: __init__.py  inline_kb.py
bot/middlewares/: auth.py
bot/states/: __init__.py  parse_states.py
bot/utils/: __init__.py  api_client.py
(+24 files in other folders)
