[project]
name = "instagramreelstgbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "playwright>=1.57.0",
    "pydantic-settings>=2.12.0",
    "pydantic[extra,settings]>=2.12.5",
]
