[project]
name = "instagramreelstgbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "playwright>=1.57.0",
    "pydantic-settings>=2.12.0",
    "pydantic[extra,settings]>=2.12.5",
    "ruff>=0.14.14",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
