[project]
name = "instagramreelstgbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fake-useragent>=2.2.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "playwright>=1.57.0",
    "pydantic-settings>=2.12.0",
    "pydantic[extra,settings]>=2.12.5",
    "redis>=7.1.0",
    "ruff>=0.14.14",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
